Fix spacing with header and content

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -197,6 +197,6 @@ input {
 	top: -1000px;
 }
 
-.calendar {
-	margin-top:55px;
+.container {
+	padding-top:55px;
 }
